--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-"Hello World" 
+<html>
+	<head>
+		<title>Test Title</title>
+		<style>
+			ctrd {
+				text-align: center;
+			}
+		</style>
+	</head>
+	<body>
+		<h1 class="ctrd">Test Heading</h1>
+		<p class="ctrd">Test Paragraph</p>
+	</body>
+</html>
