--- a/index.html
+++ b/index.html
@@ -1,15 +1,41 @@
 <!doctype html>
 <html>
 	<head>
-		<title>Test Title</title>
+		<title>MathMis</title>
 		<style>
-			ctrd {
+			.graph {
+				border: 3px solid #000000;
+				width: 32em;
+				height: 32em;
+			}
+			.graphcontainer {
 				text-align: center;
 			}
 		</style>
 	</head>
 	<body>
-		<h1 class="ctrd">Test Heading</h1>
-		<p class="ctrd">Test Paragraph</p>
+		<h1 style="text-align: center;">Mathematical Misadventures</h1>
+		<div class="graphcontainer">
+			<canvas id="maingraph" class="graph"></canvas>
+		</div>
+		<script>
+			var canvas = document.getElementById("maingraph");
+			var w = canvas.width;
+			var h = canvas.height;
+			var ctx = canvas.getContext("2d");
+			ctx.moveTo(w/2, 0);
+			ctx.lineTo(w/2, h);
+			ctx.moveTo(0, h/2);
+			ctx.lineTo(w, h/2);
+			ctx.stroke();
+			
+			function drawline(int x, int y, var func(x, y)) {
+				
+			}
+			
+			function getx(int x) {
+				return 20*(x-(w/2))/w
+			}
+		</script>
 	</body>
 </html>
