--- a/index.html
+++ b/index.html
@@ -30,5 +30,8 @@
 		<div class="graphcontainer">
 			<canvas id="maingraph" class="graph"></canvas>
 		</div>
+		<footer>
+			<p>Issues? Contact ndimensional@mathematicalmisadventures.com</p>
+		</footer>
 	</body>
 </html>
