--- a/index.html
+++ b/index.html
@@ -24,11 +24,13 @@
 			ctx.lineTo(w, h/2);
 			ctx.stroke();
 		</script>
+		<meta name="description" content="Mathematical Meandering">
+		<meta name="keywords" content="mathematical, misadventures, mathmis">
 	</head>
 	<body>
-		<h1 style="text-align: center;">Mathematical Misadventures</h1>
-		<div class="graphcontainer">
-			<canvas id="maingraph" class="graph"></canvas>
+		<div style="text-align: center; font-family: Verdana;">
+			<h1 style="margin-bottom: 0; border: 0.125em solid #000000; border-bottom: 0.0625em solid #000000;">Mathematical Misadventures</h1>
+			<p style="margin-top: 0; border: 0.125em solid #000000; border-top: 0.0625em solid #000000;"><a href="javascript: alert('Contact');">Contact</a></p>
 		</div>
 	</body>
 </html>
